packages/beff-wasm/fixtures/errors/cannot-resolve/r12.ts
export const r15 = {
  "/hello112312323": {
    get: async (): Function => {
      return "test";
    },
  },
};
